@@ -1,5 +1,8 @@
 info_TEXINFOS = DevIL_manual.texi
 
+dvi:
+	echo "The DVI documentation won't be built. It is not feasible since it contains a lot of images. Build PDF or HTML docs instead..."
+
 EXTRA_DIST = images/DevIL.jpg\
 	     images/DevIL.png\
 	     images/devil_msvc_include.png\
